--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
+    "days": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
